--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng lint && ng build",
+    "start": "node dist/spacex-app/server/main.js",
+    "build": "ng lint && ng build --prod && ng run spacex-app:server:production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
